--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11623,3 +11623,735 @@ p {
   margin: 0px auto;
 }
 
+.landing-form .container-main {
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100vh;
+}
+
+.landing-form .parent-holder {
+  background-color: #dcdde1;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+.landing-form .new-box {
+  background-color: #ffb8b8;
+  margin-right: 55px;
+  margin-bottom: 15px;
+  margin-left: 50px;
+  display: flex;
+  flex-direction: column;
+  width: 32%;
+  height: 75%;
+  margin-top: 100px;
+  overflow-y: scroll;
+  /* width */
+  /* Track */
+  /* Handle */
+  /* Handle on hover */
+}
+
+.landing-form .new-box::-webkit-scrollbar {
+  width: 10px;
+}
+
+.landing-form .new-box::-webkit-scrollbar-track {
+  background: #b2bec3;
+}
+
+.landing-form .new-box::-webkit-scrollbar-thumb {
+  background: #b2bec3;
+}
+
+.landing-form .new-box::-webkit-scrollbar-thumb:hover {
+  background: #888;
+}
+
+.landing-form .new-box .box-title {
+  font-size: 20px;
+  background-color: #636e72;
+  color: white;
+  text-transform: capitalize;
+  text-align: center;
+  height: 36px;
+  padding-top: 3px;
+  position: relative;
+  display: inline-block;
+  border-radius: 2px;
+  text-decoration: none;
+}
+
+.landing-form .new-box .box-title .badge {
+  height: 20px;
+  padding-bottom: 17px;
+  border-radius: 25%;
+  background-color: red;
+  color: white;
+}
+
+.landing-form .new-box .box-wrapper {
+  background-color: transparent;
+}
+
+.landing-form .new-box .box-card {
+  height: 219px;
+  border-radius: 18px;
+  width: 283px;
+  margin: 11px;
+  margin-top: 24px;
+  display: flex;
+  flex-direction: column;
+  border-color: #BDC3C7;
+  border: solid 2px #BDC3C7;
+}
+
+.landing-form .new-box .card-title {
+  background-color: #E6E9ED;
+  height: 90px;
+  width: 278px;
+  border-top-left-radius: 14px;
+  border-top-right-radius: 14px;
+  padding-top: 58px;
+  padding-left: 11px;
+}
+
+.landing-form .new-box .card-title-second {
+  background-color: white;
+  height: 34px;
+  width: 278px;
+  font-weight: bold;
+  padding-top: 14px;
+  padding-left: 11px;
+}
+
+.landing-form .new-box .card-title-third {
+  background-color: white;
+  height: 32px;
+  width: 278px;
+  padding-left: 11px;
+}
+
+.landing-form .new-box .card-date {
+  background-color: white;
+  height: 101px;
+  width: 278px;
+  padding-left: 11px;
+  text-align: end;
+  padding-right: 19px;
+}
+
+.landing-form .new-box .function-btn {
+  width: 278px;
+  background-color: white;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  padding-left: 26px;
+  padding-bottom: 12px;
+  padding-top: 7px;
+}
+
+.landing-form .new-box .get-btn {
+  background-color: #00b894;
+  border-color: #BDC3C7;
+  border-color: #BDC3C7;
+  width: 80% !important;
+  max-width: 110px !important;
+  height: auto !important;
+  color: white !important;
+  border-radius: 5px;
+}
+
+.landing-form .new-box .cancel-btn {
+  background-color: #d63031;
+  border-color: #BDC3C7;
+  border-color: #BDC3C7;
+  width: 80% !important;
+  max-width: 110px !important;
+  height: auto !important;
+  color: white !important;
+  border-radius: 5px;
+}
+
+.landing-form .ongoing-box {
+  background-color: #3dc1d3;
+  margin-right: 55px;
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  width: 32%;
+  height: 75%;
+  margin-top: 100px;
+  overflow-y: scroll;
+  /* width */
+  /* Track */
+  /* Handle */
+  /* Handle on hover */
+}
+
+.landing-form .ongoing-box::-webkit-scrollbar {
+  width: 10px;
+}
+
+.landing-form .ongoing-box::-webkit-scrollbar-track {
+  background: #b2bec3;
+}
+
+.landing-form .ongoing-box::-webkit-scrollbar-thumb {
+  background: #b2bec3;
+}
+
+.landing-form .ongoing-box::-webkit-scrollbar-thumb:hover {
+  background: #888;
+}
+
+.landing-form .ongoing-box .box-title {
+  font-size: 20px;
+  background-color: #636e72;
+  color: white;
+  text-transform: capitalize;
+  text-align: center;
+  height: 36px;
+  padding-top: 3px;
+}
+
+.landing-form .ongoing-box .box-wrapper {
+  background-color: transparent;
+}
+
+.landing-form .ongoing-box .box-title {
+  font-size: 20px;
+  background-color: #636e72;
+  color: white;
+  text-transform: capitalize;
+  text-align: center;
+  height: 36px;
+  padding-top: 3px;
+  position: relative;
+  display: inline-block;
+  border-radius: 2px;
+  text-decoration: none;
+}
+
+.landing-form .ongoing-box .box-title .badge {
+  height: 20px;
+  padding-bottom: 17px;
+  border-radius: 25%;
+  background-color: red;
+  color: white;
+}
+
+.landing-form .ongoing-box .box-wrapper {
+  background-color: transparent;
+}
+
+.landing-form .ongoing-box .box-card {
+  height: 219px;
+  border-radius: 18px;
+  width: 283px;
+  margin: 11px;
+  margin-top: 24px;
+  display: flex;
+  flex-direction: column;
+  border-color: #BDC3C7;
+  border: solid 2px #BDC3C7;
+}
+
+.landing-form .ongoing-box .card-title {
+  background-color: #E6E9ED;
+  height: 90px;
+  width: 278px;
+  border-top-left-radius: 14px;
+  border-top-right-radius: 14px;
+  padding-top: 58px;
+  padding-left: 11px;
+}
+
+.landing-form .ongoing-box .card-title-second {
+  background-color: white;
+  height: 34px;
+  width: 278px;
+  font-weight: bold;
+  padding-top: 14px;
+  padding-left: 11px;
+}
+
+.landing-form .ongoing-box .card-title-third {
+  background-color: white;
+  height: 32px;
+  width: 278px;
+  padding-left: 11px;
+}
+
+.landing-form .ongoing-box .card-date {
+  background-color: white;
+  height: 101px;
+  width: 278px;
+  padding-left: 11px;
+  text-align: end;
+  padding-right: 19px;
+}
+
+.landing-form .ongoing-box .function-btn {
+  width: 278px;
+  background-color: white;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  padding-left: 82px;
+  padding-bottom: 12px;
+  padding-top: 7px;
+}
+
+.landing-form .ongoing-box .resolve-btn {
+  background-color: #00b894;
+  border-color: #BDC3C7;
+  border-color: #BDC3C7;
+  width: 80% !important;
+  max-width: 110px !important;
+  height: auto !important;
+  color: white !important;
+  border-radius: 5px;
+}
+
+.landing-form .done-box {
+  background-color: #c56cf0;
+  margin-right: 55px;
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  width: 32%;
+  height: 75%;
+  margin-top: 100px;
+  overflow-y: scroll;
+  /* width */
+  /* Track */
+  /* Handle */
+  /* Handle on hover */
+}
+
+.landing-form .done-box::-webkit-scrollbar {
+  width: 10px;
+}
+
+.landing-form .done-box::-webkit-scrollbar-track {
+  background: #b2bec3;
+}
+
+.landing-form .done-box::-webkit-scrollbar-thumb {
+  background: #b2bec3;
+}
+
+.landing-form .done-box::-webkit-scrollbar-thumb:hover {
+  background: #888;
+}
+
+.landing-form .done-box .box-title {
+  font-size: 20px;
+  background-color: #636e72;
+  color: white;
+  text-transform: capitalize;
+  text-align: center;
+  height: 36px;
+  padding-top: 3px;
+  position: relative;
+  display: inline-block;
+  border-radius: 2px;
+  text-decoration: none;
+}
+
+.landing-form .done-box .box-title .badge {
+  height: 20px;
+  padding-bottom: 17px;
+  border-radius: 25%;
+  background-color: red;
+  color: white;
+}
+
+.landing-form .done-box .box-wrapper {
+  background-color: transparent;
+}
+
+.landing-form .done-box .box-title {
+  font-size: 20px;
+  background-color: #636e72;
+  color: white;
+  text-transform: capitalize;
+  text-align: center;
+  height: 36px;
+  padding-top: 3px;
+}
+
+.landing-form .done-box .box-wrapper {
+  background-color: transparent;
+}
+
+.landing-form .done-box .box-card {
+  height: 219px;
+  border-radius: 18px;
+  width: 283px;
+  margin: 11px;
+  margin-top: 24px;
+  display: flex;
+  flex-direction: column;
+  border-color: #BDC3C7;
+  border: solid 2px #BDC3C7;
+}
+
+.landing-form .done-box .card-title {
+  background-color: #E6E9ED;
+  height: 90px;
+  width: 278px;
+  border-top-left-radius: 14px;
+  border-top-right-radius: 14px;
+  padding-top: 58px;
+  padding-left: 11px;
+}
+
+.landing-form .done-box .card-title-second {
+  background-color: white;
+  height: 34px;
+  width: 278px;
+  font-weight: bold;
+  padding-top: 14px;
+  padding-left: 11px;
+}
+
+.landing-form .done-box .card-title-third {
+  background-color: white;
+  height: 32px;
+  width: 278px;
+  padding-left: 11px;
+}
+
+.landing-form .done-box .card-date-done {
+  background-color: white;
+  height: 101px;
+  width: 278px;
+  padding-left: 11px;
+  text-align: end;
+  padding-right: 19px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.landing-form .dashboard {
+  padding-top: 60px;
+  height: 100vh;
+  width: 100%;
+  max-width: 240px;
+  background-color: #876ab1;
+}
+
+.landing-form .dashboard .dashboard-wrapper .user-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.landing-form .dashboard .dashboard-wrapper .user-wrapper .user-icon {
+  width: 100%;
+  height: 100%;
+  max-width: 120px;
+  border-radius: 100%;
+}
+
+.landing-form .dashboard .dashboard-wrapper .user-wrapper .user-details {
+  margin-top: 10px;
+  line-height: 20px;
+  color: white;
+  font-size: 16px;
+}
+
+.landing-form .dashboard .dashboard-wrapper .user-wrapper .user-details .user-name {
+  font-weight: 600;
+}
+
+.landing-form .dashboard .dashboard-wrapper .list-wrapper {
+  margin-top: 30px;
+}
+
+.landing-form .dashboard .dashboard-wrapper .list-wrapper .list-container {
+  padding: 13px 30px 13px 30px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: white;
+}
+
+.landing-form .dashboard .dashboard-wrapper .list-wrapper .list-container .list-icon {
+  margin-right: 10px;
+}
+
+.landing-form .dashboard .dashboard-wrapper .list-wrapper .list-container .list-choice {
+  color: white;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.landing-form .dashboard .dashboard-wrapper .list-wrapper .list-container:hover {
+  text-decoration: none;
+  background-color: #7c718e;
+  border-left: solid 5px #544d4d;
+  padding-left: 25px;
+}
+
+.landing-form .dashboard .dashboard-wrapper .list-wrapper .active-list {
+  background-color: #b7a7d0;
+  border-left: solid 5px white;
+  padding-left: 25px;
+}
+
+.landing-form .custom-navbar {
+  padding-left: 40px;
+  padding-right: 40px;
+  position: fixed;
+  width: 100%;
+  z-index: 99;
+}
+
+.landing-form .custom-navbar .nav-title {
+  padding-left: 10px;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.landing-form .custom-navbar .nav-options {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: gray;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper {
+  border-right: solid 1px gray;
+  padding: 0 15px 0 15px;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu {
+  right: 0;
+  left: auto;
+  margin-top: 10px;
+  width: 100%;
+  min-width: 350px;
+  height: 250px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  overflow: auto;
+  /* width */
+  /* Track */
+  /* Handle */
+  /* Handle on hover */
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu::-webkit-scrollbar {
+  width: 10px;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .no-notification {
+  display: none !important;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  padding: 0 20px;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder .notif-box-icon {
+  opacity: 0.3;
+  margin-bottom: 10px;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder .notif-line {
+  border-top: solid 2px #876ab1;
+  width: 100%;
+  margin: 5px 0;
+  max-width: 100px;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder .notif-details {
+  line-height: 25px;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder .notif-title {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder .notif-subtitle {
+  font-size: 14px;
+  line-height: 15px;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder-yes {
+  padding: 20px;
+  padding-top: 5px;
+  padding-bottom: 0;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder-yes .notification-text-title {
+  font-weight: 600;
+  font-size: 18px;
+  margin-bottom: 10px !important;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder-yes .notif-display-area {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  margin-bottom: 15px;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder-yes .notif-display-area .notif-icon-check {
+  width: 100%;
+  max-width: 70px;
+  background-color: #876ab1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder-yes .notif-display-area .notif-icon-check .fa {
+  color: white;
+  font-size: 25px;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder-yes .notif-display-area .notif-icon-times {
+  width: 100%;
+  max-width: 70px;
+  background-color: #7d7d7d;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder-yes .notif-display-area .notif-icon-times .fa {
+  color: white;
+  font-size: 25px;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder-yes .notif-display-area .notif-card {
+  width: 100%;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder-yes .notif-display-area .notif-card .card-info-group {
+  line-height: 15px;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder-yes .notif-display-area .notif-card .card-info-group .notif-name {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder-yes .notif-display-area .notif-card .card-info-group .notif-department {
+  font-size: 14px;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder-yes .notif-display-area .notif-card .card-user {
+  padding: 10px;
+  padding-bottom: 5px;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder-yes .notif-display-area .notif-card .card-approver {
+  padding: 5px 10px 5px 10px;
+  font-size: 12px;
+  line-height: 15px !important;
+  background-color: gainsboro;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder-yes .notif-display-area .notif-card .card-approver .info-top {
+  display: flex;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .notification-menu .notification-holder-yes .notif-display-area .notif-card .card-approver .notif-approver {
+  margin-left: 5px !important;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .btn-notification {
+  border: none;
+  background-color: transparent;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .btn-notification .nav-icon {
+  color: gray;
+  font-size: 20px;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .btn-notification:focus {
+  outline: none;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper .btn-notification:focus .nav-icon {
+  color: cornflowerblue;
+}
+
+.landing-form .custom-navbar .nav-options .nav-option-wrapper:last-child {
+  border-right: solid 1px transparent;
+}
+
+.tutorial .container-fluid,
+.tutorial .container-sm,
+.tutorial .container-md,
+.tutorial .container-lg,
+.tutorial .container-xl {
+  height: 100vh;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.tutorial .container-fluid .parent-holder,
+.tutorial .container-sm .parent-holder,
+.tutorial .container-md .parent-holder,
+.tutorial .container-lg .parent-holder,
+.tutorial .container-xl .parent-holder {
+  background-color: green;
+  height: 500px;
+  width: 1000px;
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+}
+
+.tutorial .container-fluid .parent-holder .new-box,
+.tutorial .container-sm .parent-holder .new-box,
+.tutorial .container-md .parent-holder .new-box,
+.tutorial .container-lg .parent-holder .new-box,
+.tutorial .container-xl .parent-holder .new-box {
+  background-color: white;
+  height: 200px;
+  width: 300px;
+  margin-right: 15px;
+  margin-bottom: 15px;
+}
+
