--- a/resources/sass/_landing.scss
+++ b/resources/sass/_landing.scss
@@ -20,7 +20,7 @@
     }
 
     .new-box {
-        background-color: #ffb8b8;
+        background-color: white;
         margin-right: 55px;
         margin-bottom: 15px;
         margin-left: 44px;
@@ -166,7 +166,7 @@
     }
 
     .ongoing-box {
-        background-color: #3dc1d3;
+        background-color: white;
         margin-right: 55px;
         margin-bottom: 15px;
         display: flex;
@@ -309,7 +309,7 @@
     }
 
     .done-box {
-        background-color: #c56cf0;
+        background-color: white;
         margin-right: 55px;
         margin-bottom: 15px;
         display: flex;
