--- a/resources/sass/_userform.scss
+++ b/resources/sass/_userform.scss
@@ -271,6 +271,10 @@
                     align-items: center;
                     color: white;
 
+                    &:hover {
+                        cursor: pointer;
+                    }
+
                     .list-icon {
                         margin-right: 10px;
                     }
@@ -366,13 +370,28 @@
                 .swiper-content-holder {
                     padding: 20px;
 
-                    .form-heading {
-                        font-size: 20px;
-                        font-weight: 500;
+                    .heading-wrapper {
+                        display: flex;
                         border-bottom: solid 1px #676161;
                         padding-bottom: 10px;
                         padding-left: 10px;
-                        color: #676161;
+                        padding-right: 10px;
+                        justify-content: space-between;
+                        align-items: center;
+
+                        .fa {
+                            font-size: 30px;
+                            font-weight: 500;
+                            
+                            color: #676161;
+                        }
+
+                        .form-heading {
+                            font-size: 20px;
+                            font-weight: 500;
+                            
+                            color: #676161;
+                        }
                     }
 
                     .swiper-form-part {
@@ -439,12 +458,12 @@
 
                         .radio-image {
                             border: 1px solid gray;
-                            height: 50px;
+                            height: 65px; //50
                             display: flex;
                             justify-content: center;
                             align-items: center;
                             flex-direction: column;
-                            line-height: 15px;
+                            line-height: 20px; //15px
                             border-radius: 10px;
                             margin-bottom: 0;
 
@@ -481,6 +500,46 @@
                                 color: white;
                             }
                           }
+                    }
+
+                    .confirmation-table-up, .confirmation-table-bot {
+                        width: 100%;
+                        margin-top: 10px;
+
+                        .td-upper {
+                            border: solid 1px grey;
+                            width: 25%;
+                            font-size: 13px;
+                            padding-left: 5px;
+                        }
+
+                        .td-bg {
+                            background-color: lightgray;
+                        }
+                    }
+
+                    .table-username {
+                        .td-label {
+                            width: 25%;
+                            border: solid 1px grey;
+                            padding-left: 5px;
+                            font-size: 13px;
+                        }
+
+                        .td-name {
+                            width: 75%;
+                            border: solid 1px grey;
+                            padding-left: 5px;
+                            font-size: 13px;
+                        }
+                    }
+
+                    .confirmation-table-up {
+
+                    }
+
+                    .confirmation-table-bot {
+
                     }
                 }
 
@@ -520,6 +579,24 @@
 
         .form-check {
             margin-right: 20px;
+        }
+    }
+
+    .btn-submit {
+        position: absolute;
+        background-color: mediumseagreen;
+        color: white;
+        font-weight: 600;
+        text-transform: uppercase;
+        width: 100%;
+        max-width: 110px;
+        bottom: 20px;
+        right: 20px;
+        border: solid 2px mediumseagreen;
+
+        &:hover {
+            background-color: white;
+            color: mediumseagreen;
         }
     }
 }
