--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,3 +8,7 @@
 @import '~bootstrap/scss/bootstrap';
 
 @import 'userform';
+@import 'doctray';
+@import 'tutorial';
+@import 'history';
+@import 'helpModal';
